--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About - Raúl Rodríguez Ruiz</title>
+  <title>Jobs - Raúl Rodríguez Ruiz</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="style.js" defer></script>
 
