--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
         </div>
     </section>
-        <section id="Home">
+        <section id="about">
         <h2 class="section-title">About Me</h2>
         <p>I’m a bilingual Business Analyst and Business Management Engineer with experience across technology, manufacturing, and healthcare. Skilled in project coordination, business administration and process improvement, I bridge the gap between business needs and technical execution. I’ve led and supported web platform projects using Agile and Waterfall methodologies, focusing on stakeholder collaboration, user stories, and quality assurance. Proficient in tools like Azure DevOps, HTML, Excel, Jira, Drawio and Lucidchart, I bring analytical thinking and adaptability to every project. Fluent in English and Spanish, I’m passionate about solving complex problems, driving efficiency, and delivering value through thoughtful, data-driven strategies.</p>
     </section>
