Added the tab icon

--- a/skills.html
+++ b/skills.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Skills - Raúl Rodríguez Ruiz</title>
   <link rel="stylesheet" href="styles.css" />
+  <link type="image/png" href="download icon/favicon.png" rel="icon" />
   <script src="style.js"></script>
   <style>
     .skill-description {
