--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About - Raúl Rodríguez Ruiz</title>
     <link rel="stylesheet" href="styles.css" />
-    <link type="image/png" sizes="32x32" rel="icon" href=".../icons8-r-stencil-32.png">
+    <link type="image/png" href="download icon/favicon.png" rel="icon" />
 </head>
 <body>
     <header>
