--- a/experience.html
+++ b/experience.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
   <link type="image/png" href="download icon/favicon.png" rel="icon" />
   <script src="style.js" defer></script>
-
+  <meta name="color-scheme" content="light dark" />
 </head>
 <body>
   <header>
