--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>About - Raúl Rodríguez Ruiz</title>
     <link rel="stylesheet" href="styles.css" />
     <link type="image/png" href="download icon/favicon.png" rel="icon" />
+    <meta name="color-scheme" content="light dark" />
 </head>
 <body>
     <header>
