--- a/skills.html
+++ b/skills.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css" />
   <link type="image/png" href="download icon/favicon.png" rel="icon" />
   <script src="style.js"></script>
+  <meta name="color-scheme" content="light dark" />
   <style>
     .skill-description {
       text-align: left;
