--- a/index.html
+++ b/index.html
@@ -50,22 +50,20 @@
                 <li class="section-menu"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+    </header>
+
     <section>
-        <div class="cv-buttons">
-
-<a href="cv/Raul-Rodriguez-Ruiz-CV-25-ENGLISH.pdf" download class="btn-download">
-    Download  CV
-    <img src="https://cdn.jsdelivr.net/gh/hjnilsson/country-flags/svg/us.svg" alt="USA Flag" width="22" height="16" style="vertical-align:middle; margin-left:6px;">
-    <img src="download icon/download.png" alt="Download Icon" width="20" height="20" style="vertical-align:middle; margin-right:6px; filter: invert(32%) sepia(99%) saturate(7497%) hue-rotate(202deg) brightness(97%) contrast(101%);">
-</a>
-
-<a href="cv/Raul-Rodriguez-Ruiz-CV-25-ESPANOL.pdf" download class="btn-download">
-    Descargar CV 
-    <img src="https://cdn.jsdelivr.net/gh/hjnilsson/country-flags/svg/mx.svg" alt="Mexico Flag" width="22" height="16" style="vertical-align:middle; margin-left:6px;">
-    <img src="download icon/download.png" alt="Download Icon" width="20" height="20" style="vertical-align:middle; margin-right:6px; filter: invert(32%) sepia(99%) saturate(7497%) hue-rotate(202deg) brightness(97%) contrast(101%);">
-</a>
-
-    
+        <div class="cv-buttons" style="display: flex; justify-content: center; gap: 24px; margin: 24px 0;">
+            <a href="cv/Raul-Rodriguez-Ruiz-CV-25-ENGLISH.pdf" download class="btn-download">
+                Download CV
+                <img src="https://cdn.jsdelivr.net/gh/hjnilsson/country-flags/svg/us.svg" alt="USA Flag" width="22" height="16" style="vertical-align:middle; margin-left:6px;">
+                <img src="download icon/download.png" alt="Download Icon" width="20" height="20" style="vertical-align:middle; margin-right:6px; filter: invert(32%) sepia(99%) saturate(7497%) hue-rotate(202deg) brightness(97%) contrast(101%);">
+            </a>
+            <a href="cv/Raul-Rodriguez-Ruiz-CV-25-ESPANOL.pdf" download class="btn-download">
+                Descargar CV 
+                <img src="https://cdn.jsdelivr.net/gh/hjnilsson/country-flags/svg/mx.svg" alt="Mexico Flag" width="22" height="16" style="vertical-align:middle; margin-left:6px;">
+                <img src="download icon/download.png" alt="Download Icon" width="20" height="20" style="vertical-align:middle; margin-right:6px; filter: invert(32%) sepia(99%) saturate(7497%) hue-rotate(202deg) brightness(97%) contrast(101%);">
+            </a>
         </div>
     </section>
         <section id="about">
