--- a/projects.html
+++ b/projects.html
@@ -3,38 +3,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects - Raúl Rodríguez Ruiz</title>
+    <title>About - Raúl Rodríguez Ruiz</title>
     <link rel="stylesheet" href="styles.css" />
     <link type="image/png" href="download icon/favicon.png" rel="icon" />
-    <script src="style.js"></script>
+</head>
     <script src="translate.js" defer></script>
-    <meta name="color-scheme" content="light dark" />
 </head>
 <body>
-    <div style="position: fixed; top: 1rem; right: 1rem; z-index: 1000;">
-    <button onclick="toggleLanguage()" id="langToggleBtn" data-lang="en" style="padding: 0.5rem 1rem; background-color: #1976d2; color: white; border: none; border-radius: 0.5rem; cursor: pointer; font-size: 1rem; box-shadow: 0 2px 8px rgba(25,118,210,0.10); transition: background 0.2s; position: fixed; bottom: 1rem; left: 1rem; z-index: 1000;">
-        🇪🇸 ES
-    </button>
-    <style>
-        @media (max-width: 400px) {
-            #langToggleBtn {
-                font-size: 0.98rem !important;
-                padding: 0.45rem 0.8rem !important;
-                border-radius: 0.45rem !important;
-                min-width: 140px;
-                width: 100%;
-                box-sizing: border-box;
-            }
-        }
-        #langToggleBtn {
-            position: fixed;
-            bottom: 1rem;
-            left: 1rem;
-            z-index: 1000;
-        }
-    </style>
-      </button>
-    </div>
+<!-- Removed duplicate language toggle button and conflicting styles. Use the single implementation further down in the file. -->
     <header>
         <h1>Raúl Rodríguez Ruiz</h1>
           <p>Business Analyst | Business Management Engineer | Web dev beginner</p>
@@ -212,8 +188,8 @@
     #langToggleBtn {
       width: auto;
       min-width: 36px;
-      font-size: 0.92rem;
-      padding: 0.32rem 0.7rem;
+      font-size: 1rem;
+      padding: 0.38rem 0.9rem;
       border-radius: 0.38rem;
       background-color: #1976d2;
       color: white;
@@ -221,15 +197,17 @@
       cursor: pointer;
       box-shadow: 0 2px 8px rgba(25,118,210,0.10);
       transition: background 0.2s;
+      font-family: inherit;
     }
     @media (max-width: 400px) {
       #langToggleBtn {
-        font-size: 0.88rem;
-        padding: 0.28rem 0.6rem;
+        font-size: 0.98rem;
+        padding: 0.32rem 0.7rem;
         min-width: 36px;
         width: auto;
       }
     }
+  </style>
   </style>
     </style>
       </button>
