--- a/skills.html
+++ b/skills.html
@@ -31,28 +31,43 @@
 </head>
 
 <body>
-  <div style="position: fixed; top: 1rem; right: 1rem; z-index: 1000;">
-    <button onclick="toggleLanguage()" id="langToggleBtn" data-lang="en" style="padding: 0.5rem 1rem; background-color: #1976d2; color: white; border: none; border-radius: 0.5rem; cursor: pointer; font-size: 1rem; box-shadow: 0 2px 8px rgba(25,118,210,0.10); transition: background 0.2s; position: fixed; bottom: 1rem; left: 1rem; z-index: 1000;">
-        🇪🇸 ES
+  <div class="lang-btn-container">
+    <button onclick="toggleLanguage()" id="langToggleBtn" data-lang="en">
+      🇲🇽 ES
     </button>
-    <style>
-        @media (max-width: 400px) {
-            #langToggleBtn {
-                font-size: 0.98rem !important;
-                padding: 0.45rem 0.8rem !important;
-                border-radius: 0.45rem !important;
-                min-width: 140px;
-                width: 100%;
-                box-sizing: border-box;
-            }
-        }
-        #langToggleBtn {
-            position: fixed;
-            bottom: 1rem;
-            left: 1rem;
-            z-index: 1000;
-        }
-    </style>
+  </div>
+  <style>
+    .lang-btn-container {
+      position: fixed;
+      bottom: 1rem;
+      left: 1rem;
+      z-index: 1000;
+      width: auto;
+      max-width: 90vw;
+    }
+    #langToggleBtn {
+      width: auto;
+      min-width: 36px;
+      font-size: 1rem;
+      padding: 0.38rem 0.9rem;
+      border-radius: 0.38rem;
+      background-color: #1976d2;
+      color: white;
+      border: none;
+      cursor: pointer;
+      box-shadow: 0 2px 8px rgba(25,118,210,0.10);
+      transition: background 0.2s;
+      font-family: inherit;
+    }
+    @media (max-width: 400px) {
+      #langToggleBtn {
+        font-size: 0.98rem;
+        padding: 0.32rem 0.7rem;
+        min-width: 36px;
+        width: auto;
+      }
+    }
+  </style>
     </button>
   </div>
   <header>
