--- a/education.html
+++ b/education.html
@@ -103,7 +103,7 @@
     <p>Bachelor of Business Management Engineering</p>
     <div class="skill-description">
             <p> • Graduated with data analysis and problem-solving skills for business development.</p>
-            <p>	• Earned a Bachelor degree in Business Management Engineering, blending business administration with process optimization and strategic planning.</p>
+            <p>	• Earned a Bachelor´s degree in Business Management Engineering, blending business administration with process optimization and strategic planning.</p>
             <p> • Developed strong skills in operations management, project coordination, finance, and organizational development.</p>
             <p>	• Completed coursework in supply chain management, financial analysis, human resources, and quality systems.</p>
             <p>	• Participated in team-based projects focused on solving real-world business challenges through data-driven decision-making.</p>
