--- a/skills.html
+++ b/skills.html
@@ -73,14 +73,11 @@
   <header>
     <h1>Raúl Rodríguez Ruiz</h1>
     <p>Business Analyst | Business Management Engineer | Web dev beginner</p>
-    <nav class="main-nav">
-      <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Open navigation menu">
-      <label for="nav-toggle" class="nav-toggle-label" aria-label="Toggle navigation">
-      <span></span>
-      <span></span>
-      <span></span>
-      </label>
-      <ul>
+    <nav>
+      <button id="menuToggle" aria-label="Open menu" style="display:none;">
+      &#9776; Menu
+      </button>
+      <ul id="navMenu">
       <li class="section-menu"><a href="index.html">Home</a></li>
       <li class="section-menu active"><a href="skills.html">Skills</a></li>
       <li class="section-menu"><a href="projects.html">Projects</a></li>
@@ -88,93 +85,73 @@
       <li class="section-menu"><a href="education.html">Education</a></li>
       <li class="section-menu"><a href="#contact">Contact</a></li>
       </ul>
-      <style>
-      .main-nav {
-        position: relative;
-      }
-      .nav-toggle {
+    </nav>
+    <style>
+      @media (max-width: 700px) {
+      nav ul#navMenu {
         display: none;
-      }
-      .nav-toggle-label {
-        display: none;
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        width: 36px;
-        height: 36px;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        z-index: 2001;
+        background: #fff;
+        position: absolute;
+        top: 60px;
+        left: 10px;
+        right: 10px;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+        border-radius: 8px;
+        z-index: 1001;
       }
-      .nav-toggle-label span {
-        display: block;
-        width: 28px;
-        height: 4px;
-        margin: 5px 0;
-        background: #1976d2;
-        border-radius: 2px;
-        transition: 0.3s;
-      }
-      nav ul {
+      nav ul#navMenu.show {
         display: flex;
-        gap: 1.5rem;
-        list-style: none;
-        padding: 0;
-        margin: 0;
       }
-      nav ul li a {
-        text-decoration: none;
-        color: #1976d2;
-        font-weight: 500;
-        padding: 0.5rem 0.8rem;
-        border-radius: 0.3rem;
-        transition: background 0.2s, color 0.2s;
-      }
-      nav ul li.active a,
-      nav ul li a:hover {
+      nav #menuToggle {
+        display: inline-block;
         background: #1976d2;
         color: #fff;
+        border: none;
+        padding: 0.5rem 1rem;
+        border-radius: 6px;
+        font-size: 1.2rem;
+        margin-bottom: 0.5rem;
+        cursor: pointer;
       }
-      @media (max-width: 700px) {
-        .nav-toggle-label {
-        display: flex;
-        }
-        nav ul {
-        position: absolute;
-        top: 48px;
-        right: 0;
-        background: #fff;
-        flex-direction: column;
-        width: 180px;
-        box-shadow: 0 2px 12px rgba(25,118,210,0.08);
-        border-radius: 0 0 8px 8px;
-        overflow: hidden;
-        max-height: 0;
-        transition: max-height 0.3s;
-        z-index: 2000;
-        }
-        .nav-toggle:checked + .nav-toggle-label + ul {
-        max-height: 400px;
-        border: 1px solid #1976d2;
-        }
-        nav ul li {
-        margin: 0;
-        border-bottom: 1px solid #eee;
-        }
-        nav ul li:last-child {
-        border-bottom: none;
-        }
-        nav ul li a {
-        display: block;
-        padding: 1rem;
-        color: #1976d2;
-        background: #fff;
-        }
+      nav {
+        position: relative;
       }
-      </style>
-    </nav>
+      }
+      @media (min-width: 701px) {
+      nav #menuToggle {
+        display: none !important;
+      }
+      nav ul#navMenu {
+        display: flex !important;
+        flex-direction: row;
+        position: static;
+        box-shadow: none;
+        background: none;
+      }
+      }
+    </style>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+      var menuToggle = document.getElementById('menuToggle');
+      var navMenu = document.getElementById('navMenu');
+      if (menuToggle && navMenu) {
+        menuToggle.addEventListener('click', function() {
+        navMenu.classList.toggle('show');
+        });
+        // Optional: Hide menu when clicking outside
+        document.addEventListener('click', function(e) {
+        if (
+          window.innerWidth <= 700 &&
+          !menuToggle.contains(e.target) &&
+          !navMenu.contains(e.target)
+        ) {
+          navMenu.classList.remove('show');
+        }
+        });
+      }
+      });
+    </script>
   </header>
 
   <section id="skills">
