--- a/skills.html
+++ b/skills.html
@@ -74,7 +74,7 @@
     <h1>Raúl Rodríguez Ruiz</h1>
     <p>Business Analyst | Business Management Engineer | Web dev beginner</p>
     <nav>
-      <button id="menuToggle" aria-label="Open menu" style="display:none;">
+      <button id="menuToggle" aria-label="Open menu">
       &#9776; Menu
       </button>
       <ul id="navMenu">
