--- a/skills.html
+++ b/skills.html
@@ -87,20 +87,38 @@
       </ul>
     </nav>
     <style>
+      nav {
+      position: relative;
+      }
+      nav ul#navMenu {
+      transition: max-height 0.35s cubic-bezier(.4,0,.2,1), opacity 0.25s;
+      overflow: hidden;
+      max-height: 1000px;
+      opacity: 1;
+      padding-top: 0;
+      }
+      nav ul#navMenu:not(.show) {
+      max-height: 0;
+      opacity: 0;
+      padding-top: 0;
+      pointer-events: none;
+      }
       @media (max-width: 700px) {
       nav ul#navMenu {
-        display: none;
+        display: flex;
         flex-direction: column;
-        background: #fff;
+        background: var(--menu-bg, #fff);
+        color: var(--menu-color, #222);
         position: absolute;
         top: 60px;
         left: 10px;
         right: 10px;
-        box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-        border-radius: 8px;
+        box-shadow: 0 2px 16px rgba(0,0,0,0.10);
+        border-radius: 12px;
         z-index: 1001;
+        padding-top: 1.2rem;
       }
-      nav ul#navMenu.show {
+      nav ul#navMenu:not(.show) {
         display: flex;
       }
       nav #menuToggle {
@@ -114,8 +132,17 @@
         margin-bottom: 0.5rem;
         cursor: pointer;
       }
-      nav {
-        position: relative;
+      nav ul#navMenu li.section-menu a {
+        color: inherit;
+        padding: 0.7rem 1.2rem;
+        text-decoration: none;
+        display: block;
+        border-radius: 6px;
+        transition: background 0.2s;
+      }
+      nav ul#navMenu li.section-menu a:hover,
+      nav ul#navMenu li.section-menu.active a {
+        background: var(--menu-hover, #e3eafc);
       }
       }
       @media (min-width: 701px) {
@@ -128,6 +155,28 @@
         position: static;
         box-shadow: none;
         background: none;
+        color: inherit;
+        max-height: none !important;
+        opacity: 1 !important;
+        padding-top: 0 !important;
+      }
+      nav ul#navMenu li.section-menu a {
+        padding: 0.5rem 1.2rem;
+      }
+      }
+      /* Light/Dark mode support */
+      @media (prefers-color-scheme: dark) {
+      nav ul#navMenu {
+        --menu-bg: #23272f;
+        --menu-color: #f3f6fa;
+        --menu-hover: #2d3642;
+      }
+      }
+      @media (prefers-color-scheme: light) {
+      nav ul#navMenu {
+        --menu-bg: #fff;
+        --menu-color: #222;
+        --menu-hover: #e3eafc;
       }
       }
     </style>
@@ -139,7 +188,7 @@
         menuToggle.addEventListener('click', function() {
         navMenu.classList.toggle('show');
         });
-        // Optional: Hide menu when clicking outside
+        // Hide menu when clicking outside
         document.addEventListener('click', function(e) {
         if (
           window.innerWidth <= 700 &&
